fix(layout): change text align to left

--- a/packages/layout/src/assets/css/components/sidebar.css
+++ b/packages/layout/src/assets/css/components/sidebar.css
@@ -46,6 +46,10 @@
   opacity: 1;
 }
 
+.sidebar-menu a {
+  text-align: left !important;
+}
+
 @media screen and (max-width: 576px) {
   .sidebar-menu {
     display: none;
